fix overflow issue for inner-box

--- a/ngSDConnect/WebContent/css/basic.css
+++ b/ngSDConnect/WebContent/css/basic.css
@@ -65,7 +65,7 @@ body {
     margin: 10px 5px 10px 0px;
     background-color: #fff!important;
     padding: 5px;
-    min-height: 1200px;
+    /* min-height: 1200px; */
 }
 
 .page-head-line {
